# Luqman-Ai-Task-Manager

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  USER_QUICK_START.md  api-server.cjs  index.html  package-lock.json  package.json
.claude/: settings.local.json
mcp-server/: index.js  package.json
scripts/: setup-global-claude.cjs  task-cli.cjs  task-cli.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Header.tsx  KanbanBoard.tsx  NewTaskModal.tsx  NewWorkspaceModal.tsx  PlansPage.tsx  RulesPage.tsx  Sidebar.tsx  StatsPage.tsx  TaskCard.tsx  TaskDetailModal.tsx  TrashModal.tsx
src/stores/: useStore.ts
src/styles/: globals.css
src/types/: index.ts
